2011-11-07  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/math_private.h: Using inline assembly version
	of math functions ceil, trunc, floor, round, and sqrt, when
	avaliable on the platform.
	* sysdeps/powerpc/fpu/e_sqrt.c: Undefine __ieee754_sqrt to avoid
	name clash.
	* sysdeps/powerpc/fpu/e_sqrtf.c: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/e_sqrt.c: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/e_sqrtf.c: Likewise.

2011-10-30  Marek Polacek  <mpolacek@redhat.com>

	* libio/wfileops.c (_IO_wfile_underflow_mmap): Remove unused variable.
	* sysdeps/ieee754/dbl-64/mpsqrt.c (__mpsqrt): Likewise.

2011-11-11  Roland McGrath  <roland@hack.frob.com>

	* include/unistd.h: Fix __readlink return type.
	Reported by Chris Metcalf <cmetcalf@tilera.com>.

2011-11-11  Ulrich Drepper  <drepper@gmail.com>

	* stdlib/ucontext.h: Undo last change for makecontext.

2011-11-11  Andreas Schwab  <schwab@redhat.com>

	* nss/db-Makefile ($(VAR_DB)/group.db): Fix typo in awk script.

	* misc/sys/cdefs.h (__REDIRECT_NTHNL): Define.
	* setjmp/setjmp.h: Mark functions as non-leaf.
	* setjmp/bits/setjmp2.h: Likewise.
	* stdlib/ucontext.h: Likewise.

2011-11-10  Andreas Schwab  <schwab@redhat.com>

	* malloc/arena.c (_int_new_arena): Don't increment narenas.
	(reused_arena): Don't check arena limit.
	(arena_get2): Atomically check arena limit.

2011-11-08  Ulrich Drepper  <drepper@gmail.com>

	* locale/findlocale.c (_nl_find_locale): Use __strcasecmp_l.
	* intl/localealias.c (strcasecmp): Define using __strcasecmp_l.

	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S: Remove unnecessary
	instructions.

2011-11-07  Andreas Schwab  <schwab@redhat.com>

	* libio/genops.c (_IO_flush_all_lockp): Only register cleanup
	handler when locking.

	* nss/nss_files/files-initgroups.c (_nss_files_initgroups_dyn):
	Fix size of allocated buffer.

2011-11-04  Andreas Schwab  <schwab@redhat.com>

	[BZ #10103]
	* math/math.h [__NO_LONG_DOUBLE_MATH && !_LIBC]: Provide